fix button visibility

--- a/todo.css
+++ b/todo.css
@@ -72,10 +72,10 @@ ul {
     color: white;
     font-size: 1.25rem;
     font-weight: 700;
-    background-image: linear-gradient(to right, var(--primary-gradient-one), var(--primary-gradient-two));
+    /* background-image: linear-gradient(to right, var(--primary-gradient-one), var(--primary-gradient-two));
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
     opacity: 1;
     transition: 0.4s;
 }
@@ -170,10 +170,11 @@ button {
 }
 
 .edit-button {
-    background-image: linear-gradient(to right, var(--primary-gradient-one), var(--primary-gradient-two));
+    color: white;
+    /* background-image: linear-gradient(to right, var(--primary-gradient-one), var(--primary-gradient-two));
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
 }
 
 .delete-button {
